<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iarc_main</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yang-yy24@mails.tsinghua.edu.cn">yangy</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>iarc_msgs</depend>
  <depend>iarc_utils</depend>
  <depend>python3-pymap3d</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_python</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
